--- a/numpy_study/pandas_study.ipynb
+++ b/numpy_study/pandas_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -302,6 +302,128 @@
     "df2['Chinese']=df2['Chinese'].map(str.lstrip)\n",
     "##删除右边空格\n",
     "df2['Chinese']=df2['Chinese'].map(str.rstrip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            English  Math Chinese\n",
+      "ZhangFei         65    30      66\n",
+      "GuanYu           85    98      95\n",
+      "ZhaoYun          92    96      93\n",
+      "HuangZhong       88    77      90\n",
+      "DianWei          90    90        \n"
+     ]
+    }
+   ],
+   "source": [
+    "###查找空值\n",
+    "##### DataFrame 和Series 的关系，可以将DataFrame 看成是由相同索引的Series\n",
+    "data = {'Chinese': [66, 95, 93, 90,''],'English': [65, 85, 92, 88, 90],'Math': [30, 98, 96, 77, 90]}\n",
+    "df2 = DataFrame(data, index=['ZhangFei', 'GuanYu', 'ZhaoYun', 'HuangZhong', 'DianWei'], columns=['English', 'Math', 'Chinese'])\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>English</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chinese</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ZhangFei</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GuanYu</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZhaoYun</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HuangZhong</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DianWei</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            English   Math  Chinese\n",
+       "ZhangFei      False  False    False\n",
+       "GuanYu        False  False    False\n",
+       "ZhaoYun       False  False    False\n",
+       "HuangZhong    False  False    False\n",
+       "DianWei       False  False    False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###\n",
+    "df2.isnull() ###查看哪些地方存在空值NaN, \n",
+    "df2.isnull().any() ###查看哪些列存在空值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###使用apply 函数对数据进行清洗， apply 是Pandas 中自由度非常高的函数，使用频率也很高\n",
+    "df2['name'] = df['name'].apply(str.upper)"
    ]
   }
  ],
